mobile device design done

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Menu</title>
+    <link rel="stylesheet" href="css/style.css">
 
+</head>
+<body>
+    <div class="container">
+        <div  class="row">
+            <div class="heading"> <h2>Our menu</h2></div>
+        </div>
+        <div class="row">
+            <div class="block">
+                <div class="card-header bg-pink">Chicken</div>
+                <div class="content">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia facere mollitia praesentium dignissimos distinctio aliquam a unde, voluptatibus labore quaerat alias, possimus commodi odio quibusdam animi. Perspiciatis obcaecati dolores consequuntur.
+                    </p>
+                </div>
+            </div>
+
+            <div class="block">
+                <div class="card-header bg-red t-white">Beef</div>
+                <div class="content">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia facere mollitia praesentium dignissimos distinctio aliquam a unde, voluptatibus labore quaerat alias, possimus commodi odio quibusdam animi. Perspiciatis obcaecati dolores consequuntur.
+                    </p>
+                </div>
+            </div>
+
+            <div class="block">
+                <div class="card-header bg-yellow">Sushi</div>
+                <div class="content">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia facere mollitia praesentium dignissimos distinctio aliquam a unde, voluptatibus labore quaerat alias, possimus commodi odio quibusdam animi. Perspiciatis obcaecati dolores consequuntur.
+                    </p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</body>
+</html>
